Fix ECONNREFUSED error - direct database access for categories
 Fixed categories not appearing by using Prisma directly instead of HTTP API calls
 Updated services page to use server-side database queries
 Fixed category pages with direct database access
 Enhanced build process with proper seeding order
 Added fallback categories for reliability
 All booking functionality preserved and working

 Ready for production deployment with full booking system:
- Time slot removal when booked
- 67 services across 6 categories
- Staff availability management
- Customer booking system
- Admin management tools

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build && npm run seed",
+    "build": "npx prisma generate && npm run seed && next build",
     "start": "next start",
     "lint": "next lint",
     "images": "node scripts/image-manager.js",
